src/k8/ingress/wm-app-deploy-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wm-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
      role: frontend
      scs: wm
  template:
    metadata:
      labels:
        app: customer
        role: frontend
        scs: wm
    spec:
      containers:
      - name: nginx
        image: chrisburki/wm-app
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]

---

apiVersion: v1
kind: Service
metadata:
  name: wm-app
spec:
  selector:
    app: customer
    role: frontend
    scs: wm
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
