src/k8/ingress/wm-customer-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wm-customer-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
      role: database
      scs: wm
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: customer
        role: database
        scs: wm
    spec:
      containers:
        - name: wm-customer-db
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: customer-db-claim

---
apiVersion: v1
kind: Service
metadata:
  name: wm-customer-db
spec:
  selector:
    app: wm-app
    role: database
    scs: wm
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
