src/k8/ingress/wm-customer-deploy-ingress.yaml
#before: kubectl create configmap hostname-config --from-literal=postgres_host=$(kubectl get svc wm-customer-db -o jsonpath="{.spec.clusterIP}")
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: hostname-config
#  namespace: default
#data:
#  postgres_user: buc
#  postgres_password: buc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wm-customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
      role: backend
      scs: wm
  template:
    metadata:
      labels:
        app: customer
        role: backend
        scs: wm
    spec:
      containers:
      - name: wm-customer
        image: chrisburki/wm-customer
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: wm-customer
spec:
  selector:
    app: customer
    role: backend
    scs: wm
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
