src/k8/ingress/wm-kafka-client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wm-kafkapublisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafkapublisher
      role: backend
      scs: wm
  template:
    metadata:
      labels:
        app: kafkapublisher
        role: backend
        scs: wm
    spec:
      containers:
      - name: wm-kafkapublisher
        image: chrisburki/wm-kafkapublisher
        imagePullPolicy: Always
        ports:
        - protocol: TCP
          containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: wm-kafkapublisher
spec:
  selector:
    app: kafkapublisher
    role: backend
    scs: wm
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wm-kafkaconsumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafkaconsumer
      role: backend
      scs: wm
  template:
    metadata:
      labels:
        app: kafkaconsumer
        role: backend
        scs: wm
    spec:
      containers:
      - name: wm-kafkaconsumer
        image: chrisburki/wm-kafkaconsumer
        imagePullPolicy: Always
        ports:
        - protocol: TCP
          containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: wm-kafkaconsumer
spec:
  selector:
    app: kafkaconsumer
    role: backend
    scs: wm
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
