src/k8/ingress/wm-kafka-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
      role: backend
      scs: wm
  template:
    metadata:
      labels:
        app: zookeeper
        role: backend
        scs: wm
    spec:
      containers:
      - name: zookeeper
        image: bitnami/zookeeper
        imagePullPolicy: Always
        ports:
        - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    app: zookeeper
    role: backend
    scs: wm
  ports:
  - name: client
    port: 2181
    protocol: TCP          
  - name: follower
    port: 2888
    protocol: TCP
  - name: leader
    port: 3888
    protocol: TCP
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
      role: backend
      scs: wm
  template:
    metadata:
      labels:
        app: kafka
        role: backend
        scs: wm
    spec:
      containers:
      - name: kafka
        image: bitnami/kafka
        imagePullPolicy: Always
        ports:
        - protocol: TCP
          containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: kafka
    role: backend
    scs: wm
  ports:
  - name: kafka-port
    protocol: TCP
    port: 9092
  type: ClusterIP
