src/k8/ingress/wm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: wm-app
          servicePort: 80
      - path: /customer
        backend:
          serviceName: wm-customer
          servicePort: 80
